correction contraste

--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@ a:hover {
     background: url("img/texture-paper.png"); 
      background-size: 280px 280px;
      
+     
 }
 
 .b-parallax {
@@ -844,6 +845,8 @@ h4 {
 
 .bg-banniere {
     background-image: url("img/agence-la-panthere.jpg");
+    filter: contrast(130%);
+    
 }
 
 .bg-presentation {
@@ -1142,4 +1145,5 @@ strong{
     font-weight: 600;
 
 }
+
 
